Fixes, permament dark mode

--- a/responsive.scss
+++ b/responsive.scss
@@ -25,6 +25,7 @@
 @media (max-width: 715px) {
 
     header {
+        background-position: cover;
         height: 100vh;
         flex-direction: column;
         justify-content: space-around;
