--- a/style.scss
+++ b/style.scss
@@ -12,19 +12,23 @@ body {
     background-color: white;
 }
 
+h1, h2 {
+    color: white;
+}
+
 body.dark-mode {
     background-color: black;
     color: white;
-
-    @import 'styles-dark';
 }
 
 // * 1 - Header
 
 header {
+    background-image: url(/img/dark.jpg);
+    background-position: bottom;
     animation: fadeIn 1s;
     height: 87vh;
-    color: black;
+    color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
 
@@ -43,6 +47,7 @@ header {
 
         h1 , h2 {
             margin: 0 10rem;
+            text-shadow: black 15px 0px 15px;
         }
 
         h1 {
@@ -52,7 +57,7 @@ header {
         h2 {
             font-family: monospace;
             font-size: 2.5rem;
-            color: rgb(49, 49, 49);
+            color: rgb(182, 182, 182);
         }
         h3 {
             margin: 1rem 0rem 0rem 10rem;
@@ -110,11 +115,11 @@ header {
                 padding: 0rem 0.5rem;
             }
             #linkedin-link {
-                color: rgb(38, 214, 185);
+                color: rgb(15, 132, 179);
             }
 
             #git-link {
-                color: rgb(0, 0, 0);
+                color: rgb(255, 255, 255);
                 padding-right: 1rem;
             }
 
@@ -124,9 +129,9 @@ header {
 
         }
 
-        #nightmode-btn {
+        /* #nightmode-btn {
             color: rgb(0, 0, 0);
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(233, 233, 233);
             border: 2px solid;
             position: absolute;
             top: 1rem;
@@ -138,9 +143,12 @@ header {
                 padding: 0.8rem;
             }
         }
+
+        */
     }
 
     .header-certs {
+        text-shadow: black 15px 0px 15px;
         padding-top: 1rem;
         width: 30%;
         text-align: center;
@@ -203,7 +211,7 @@ header {
             margin: 1.5rem 2rem;
             border-top: 3px orange solid;
             border-radius: 5px;
-            background-color: rgb(248, 248, 248);
+            background-color: rgb(19, 19, 19);
             justify-content: space-around;
 
             h1, p {
@@ -259,7 +267,7 @@ header {
             width: 800px;
             padding: 1rem;
             border-top: 5px blue solid;
-            background-color: rgb(248, 248, 248);
+            background-color: rgb(24, 24, 24);
             border-radius: 5px;
 
             p {
